--- a/glsandbox/GLSandbox.vcxproj
+++ b/glsandbox/GLSandbox.vcxproj
@@ -142,6 +142,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="VertexArray.cpp" />
     <ClCompile Include="VertexBuffer.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -149,6 +151,8 @@
   <ItemGroup>
     <ClInclude Include="..\..\..\..\..\..\..\..\..\Downloads\stb_image.h" />
     <ClInclude Include="bugl.h" />
+    <ClInclude Include="Shader.h" />
+    <ClInclude Include="Texture.h" />
     <ClInclude Include="VertexArray.h" />
     <ClInclude Include="VertexBuffer.h" />
   </ItemGroup>
